fix: Remove z-index:10 declaration that trumped z-index:10000000 declaration

--- a/sticked.css
+++ b/sticked.css
@@ -1,5 +1,4 @@
 .navigation--sticked {
   position: sticky;
   top: 0px;
-  z-index: var(--navigation-sticked-z-index, 10);
 }
